--- a/asset/css/reset.scss
+++ b/asset/css/reset.scss
@@ -54,7 +54,7 @@
 
 /* reset */
 html, body {height:100%;font-size: 16px;}
-*{margin:0;padding:0;letter-spacing:0;box-sizing:border-box}
+*{margin:0;padding:0;box-sizing:border-box}
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,
 article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0}
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block}
