고객리스트

--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -1,2 +1,2 @@
 @import "mixin.scss", "reset.scss", "common.scss", "layout.scss", "contents.scss";
-@import "jquery.mCustomScrollbar.css";
+@import url(jquery.mCustomScrollbar.css);
