--- a/asset/css/contents.scss
+++ b/asset/css/contents.scss
@@ -1,6 +1,9 @@
 /* 테이블형 리스트 */
 .listTableType{
     width:782px;
+    .contentScroll{
+        height: 759px !important;
+    }
     .item{
         padding:0 20px;
     }
@@ -49,6 +52,7 @@
         }
     }
     .tbodyBox{
+        padding-top: 1px;
         border-radius: 8px;        
         background:#fff;
         .item{
@@ -68,7 +72,9 @@
                 top: -1px;
                 left: 0;
                 border:2px solid #fe5855;
-                z-index: -1;
+                border-radius: 8px;
+                z-index: -1;                
+                box-shadow: 7px 7px 9px 0px rgba(0,0,0,0.12);
             }
         }
         .td{
