--- a/asset/css/contents.scss
+++ b/asset/css/contents.scss
@@ -1,6 +1,5 @@
 /* 테이블형 리스트 */
 .listTableType{
-    width:782px;
     .contentScroll{
         height: 759px !important;
     }
@@ -42,6 +41,7 @@
     }
 
     .theadBox{
+        width:782px;
         border-radius: 8px;
         margin-bottom:10px;
         background:#fff;
@@ -52,9 +52,11 @@
         }
     }
     .tbodyBox{
+        width:782px;
         padding-top: 1px;
         border-radius: 8px;        
         background:#fff;
+        margin-bottom: 15px;
         .item{
             position: relative; 
             &:hover{
