--- a/asset/css/layout.scss
+++ b/asset/css/layout.scss
@@ -135,7 +135,7 @@
       float: left;
       position: relative;
       width: 862px;
-      padding:30px 50px 30px 30px;
+      padding:30px;
       .contentScroll{
         height:815px;
       }
