--- a/asset/css/jquery.mCustomScrollbar.css
+++ b/asset/css/jquery.mCustomScrollbar.css
@@ -4,7 +4,6 @@ Plugin URI: http://manos.malihu.gr/jquery-custom-content-scroller
 */
 
 
-
 /*
 CONTENTS: 
 	1. BASIC STYLE - Plugin's basic/essential CSS properties (normally, should not be edited). 
@@ -17,144 +16,150 @@ CONTENTS:
 */
 
 
-
-/* 
+/*
 ------------------------------------------------------------------------------------------------------------------------
 1. BASIC STYLE  
 ------------------------------------------------------------------------------------------------------------------------
 */
 
-	.mCustomScrollbar{ -ms-touch-action: pinch-zoom; touch-action: pinch-zoom; /* direct pointer events to js */ }
-	.mCustomScrollbar.mCS_no_scrollbar, .mCustomScrollbar.mCS_touch_action{ -ms-touch-action: auto; touch-action: auto; }
-	
-	.mCustomScrollBox{ /* contains plugin's markup */
-		position: relative;
-		overflow: hidden;
-		height: 100%;
-		max-width: 100%;
-		outline: none;
-		direction: ltr;
-	}
+.mCustomScrollbar{ -ms-touch-action:pinch-zoom; touch-action:pinch-zoom; /* direct pointer events to js */ }
 
-	.mCSB_container{ /* contains the original content */
-		overflow: hidden;
-		width: auto;
-		height: auto;
-	}
+.mCustomScrollbar.mCS_no_scrollbar, .mCustomScrollbar.mCS_touch_action{ -ms-touch-action:auto; touch-action:auto; }
+
+.mCustomScrollBox{ /* contains plugin's markup */
+  position:relative;
+  overflow:hidden;
+  height:100%;
+  max-width:100%;
+  outline:none;
+  direction:ltr;
+}
+
+.mCSB_container{ /* contains the original content */
+  overflow:hidden;
+  width:auto;
+  height:auto;
+}
 
 
-
-/* 
+/*
 ------------------------------------------------------------------------------------------------------------------------
 2. VERTICAL SCROLLBAR 
 y-axis
 ------------------------------------------------------------------------------------------------------------------------
 */
 
-	.mCSB_inside > .mCSB_container{ margin-right: 30px; }
+.mCSB_inside > .mCSB_container{ margin-right:30px; }
 
-	.mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden{ margin-right: 0; } /* non-visible scrollbar */
-	
-	.mCS-dir-rtl > .mCSB_inside > .mCSB_container{ /* RTL direction/left-side scrollbar */
-		margin-right: 0;
-		margin-left: 30px;
-	}
-	
-	.mCS-dir-rtl > .mCSB_inside > .mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden{ margin-left: 0; } /* RTL direction/left-side scrollbar */
+.mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden{ margin-right:0; }
 
-	.mCSB_scrollTools{ /* contains scrollbar markup (draggable element, dragger rail, buttons etc.) */
-		position: absolute;
-		width: 4px;
-		height: auto;
-		left: auto;
-		top: 0;
-		right: 0;
-		bottom: 0;
-	}
+/* non-visible scrollbar */
 
-	.mCSB_outside + .mCSB_scrollTools{ right: -40px; } /* scrollbar position: outside */
-	
-	.mCS-dir-rtl > .mCSB_inside > .mCSB_scrollTools, 
-	.mCS-dir-rtl > .mCSB_outside + .mCSB_scrollTools{ /* RTL direction/left-side scrollbar */
-		right: auto;
-		left: 0;
-	}
-	
-	.mCS-dir-rtl > .mCSB_outside + .mCSB_scrollTools{ left: -26px; } /* RTL direction/left-side scrollbar (scrollbar position: outside) */
+.mCS-dir-rtl > .mCSB_inside > .mCSB_container{ /* RTL direction/left-side scrollbar */
+  margin-right:0;
+  margin-left:30px;
+}
 
-	.mCSB_scrollTools .mCSB_draggerContainer{ /* contains the draggable element and dragger rail markup */
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0; 
-		height: auto;
-	}
+.mCS-dir-rtl > .mCSB_inside > .mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden{ margin-left:0; }
 
-	.mCSB_scrollTools a + .mCSB_draggerContainer{ margin: 20px 0; }
+/* RTL direction/left-side scrollbar */
 
-	.mCSB_scrollTools .mCSB_draggerRail{
-		width: 4px;
-		height: 100%;
-		margin: 0 auto;
-		-webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;
-	}
+.mCSB_scrollTools{ /* contains scrollbar markup (draggable element, dragger rail, buttons etc.) */
+  position:absolute;
+  width:4px;
+  height:auto;
+  left:auto;
+  top:0;
+  right:0;
+  bottom:0;
+}
 
-	.mCSB_scrollTools .mCSB_dragger{ /* the draggable element */
-		cursor: pointer;
-		width: 100%;
-		height: 30px; /* minimum dragger height */
-		z-index: 1;
-	}
+.mCSB_outside + .mCSB_scrollTools{ right:-40px; }
 
-	.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{ /* the dragger element */
-		position: relative;
-		width: 4px;
-		height: 100%;
-		margin: 0 auto;
-		-webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;
-		text-align: center;
-	}
-	
-	.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_dragger.mCSB_dragger_onDrag_expanded .mCSB_dragger_bar, 
-	.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_draggerContainer:hover .mCSB_dragger .mCSB_dragger_bar{ width: 4px; /* auto-expanded scrollbar */ }
-	
-	.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_dragger.mCSB_dragger_onDrag_expanded + .mCSB_draggerRail, 
-	.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_draggerContainer:hover .mCSB_draggerRail{ width: 4px; /* auto-expanded scrollbar */ }
+/* scrollbar position: outside */
+
+.mCS-dir-rtl > .mCSB_inside > .mCSB_scrollTools,
+.mCS-dir-rtl > .mCSB_outside + .mCSB_scrollTools{ /* RTL direction/left-side scrollbar */
+  right:auto;
+  left:0;
+}
+
+.mCS-dir-rtl > .mCSB_outside + .mCSB_scrollTools{ left:-26px; }
+
+/* RTL direction/left-side scrollbar (scrollbar position: outside) */
+
+.mCSB_scrollTools .mCSB_draggerContainer{ /* contains the draggable element and dragger rail markup */
+  position:absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  height:auto;
+}
+
+.mCSB_scrollTools a + .mCSB_draggerContainer{ margin:20px 0; }
+
+.mCSB_scrollTools .mCSB_draggerRail{
+  width:4px;
+  height:100%;
+  margin:0 auto;
+  -webkit-border-radius:4px; -moz-border-radius:4px; border-radius:4px;
+}
+
+.mCSB_scrollTools .mCSB_dragger{ /* the draggable element */
+  cursor:pointer;
+  width:100%;
+  height:30px; /* minimum dragger height */
+  z-index:1;
+}
+
+.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{ /* the dragger element */
+  position:relative;
+  width:4px;
+  height:100%;
+  margin:0 auto;
+  -webkit-border-radius:4px; -moz-border-radius:4px; border-radius:4px;
+  text-align:center;
+}
+
+.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_dragger.mCSB_dragger_onDrag_expanded .mCSB_dragger_bar,
+.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_draggerContainer:hover .mCSB_dragger .mCSB_dragger_bar{ width:4px; /* auto-expanded scrollbar */ }
+
+.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_dragger.mCSB_dragger_onDrag_expanded + .mCSB_draggerRail,
+.mCSB_scrollTools_vertical.mCSB_scrollTools_onDrag_expand .mCSB_draggerContainer:hover .mCSB_draggerRail{ width:4px; /* auto-expanded scrollbar */ }
 
 
-
-/* 
+/*
 ------------------------------------------------------------------------------------------------------------------------
 6. SCROLLBAR COLORS, OPACITY AND BACKGROUNDS  
 ------------------------------------------------------------------------------------------------------------------------
 */
 
-	/* 
-	----------------------------------------
-	6.1 THEMES 
-	----------------------------------------
-	*/
-	
-	/* default theme ("light") */
+/*
+----------------------------------------
+6.1 THEMES
+----------------------------------------
+*/
 
-	.mCSB_scrollTools{ opacity: 0.75; filter: "alpha(opacity=75)"; -ms-filter: "alpha(opacity=75)"; }
-	
-	.mCS-autoHide > .mCustomScrollBox > .mCSB_scrollTools,
-	.mCS-autoHide > .mCustomScrollBox ~ .mCSB_scrollTools{ opacity: 0; filter: "alpha(opacity=0)"; -ms-filter: "alpha(opacity=0)"; }
-	
-	.mCustomScrollbar > .mCustomScrollBox > .mCSB_scrollTools.mCSB_scrollTools_onDrag,
-	.mCustomScrollbar > .mCustomScrollBox ~ .mCSB_scrollTools.mCSB_scrollTools_onDrag,
-	.mCustomScrollBox:hover > .mCSB_scrollTools,
-	.mCustomScrollBox:hover ~ .mCSB_scrollTools,
-	.mCS-autoHide:hover > .mCustomScrollBox > .mCSB_scrollTools,
-	.mCS-autoHide:hover > .mCustomScrollBox ~ .mCSB_scrollTools{ opacity: 1; filter: "alpha(opacity=100)"; -ms-filter: "alpha(opacity=100)"; }
+/* default theme ("light") */
 
-	.mCSB_scrollTools .mCSB_draggerRail{
-		background:transparent;
-	}
+.mCSB_scrollTools{ opacity:0.75; filter:"alpha(opacity=75)"; -ms-filter:"alpha(opacity=75)"; }
 
-	.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{
-		background-color: #909295;
-	}
+.mCS-autoHide > .mCustomScrollBox > .mCSB_scrollTools,
+.mCS-autoHide > .mCustomScrollBox ~ .mCSB_scrollTools{ opacity:0; filter:"alpha(opacity=0)"; -ms-filter:"alpha(opacity=0)"; }
+
+.mCustomScrollbar > .mCustomScrollBox > .mCSB_scrollTools.mCSB_scrollTools_onDrag,
+.mCustomScrollbar > .mCustomScrollBox ~ .mCSB_scrollTools.mCSB_scrollTools_onDrag,
+.mCustomScrollBox:hover > .mCSB_scrollTools,
+.mCustomScrollBox:hover ~ .mCSB_scrollTools,
+.mCS-autoHide:hover > .mCustomScrollBox > .mCSB_scrollTools,
+.mCS-autoHide:hover > .mCustomScrollBox ~ .mCSB_scrollTools{ opacity:1; filter:"alpha(opacity=100)"; -ms-filter:"alpha(opacity=100)"; }
+
+.mCSB_scrollTools .mCSB_draggerRail{
+  background:transparent;
+}
+
+.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{
+  background-color:#909295;
+}
 	
