--- a/asset/css/reset.scss
+++ b/asset/css/reset.scss
@@ -6,6 +6,7 @@
   src: url('/asset/font/NotoSansKR-Light.eot');
   src: url('/asset/font/NotoSansKR-Light.eot?#iefix') format('embedded-opentype'), url('/asset/font/NotoSansKR-Light.woff') format('woff'), url('/asset/font/NotoSansKR-Light.woff2') format('woff2');;
 }
+
 @font-face {
   font-family: 'NotoSansKR';
   font-style: normal;
@@ -13,6 +14,7 @@
   src: url('/asset/font/NotoSansKR-Regular.eot');
   src: url('/asset/font/NotoSansKR-Regular.eot?#iefix') format('embedded-opentype'), url('/asset/font/NotoSansKR-Regular.woff') format('woff'), url('/asset/font/NotoSansKR-Regular.woff2') format('woff2');
 }
+
 @font-face {
   font-family: 'NotoSansKR';
   font-style: normal;
@@ -20,6 +22,7 @@
   src: url('/asset/font/NotoSansKR-Medium.eot');
   src: url('/asset/font/NotoSansKR-Medium.eot?#iefix') format('embedded-opentype'), url('/asset/font/NotoSansKR-Medium.woff') format('woff'), url('/asset/font/NotoSansKR-Medium.woff2') format('woff2');
 }
+
 @font-face {
   font-family: 'NotoSansKR';
   font-style: normal;
@@ -27,6 +30,7 @@
   src: url('/asset/font/NotoSansKR-Bold.eot');
   src: url('/asset/font/NotoSansKR-Bold.eot?#iefix') format('embedded-opentype'), url('/asset/font/NotoSansKR-Bold.woff') format('woff'), url('/asset/font/NotoSansKR-Bold.woff2') format('woff2');
 }
+
 @font-face {
   font-family: 'NotoSansKR';
   font-style: normal;
@@ -35,6 +39,7 @@
   src: url('/asset/font/Roboto-Regular.eot');
   src: url('/asset/font/Roboto-Regular.eot?#iefix') format('embedded-opentype'), url('/asset/font/Roboto-Regular.woff') format('woff'), url('/asset/font/Roboto-Regular.woff2') format('woff2');
 }
+
 @font-face {
   font-family: 'NotoSansKR';
   font-style: normal;
@@ -43,6 +48,7 @@
   src: url('/asset/font/Roboto-Medium.eot');
   src: url('/asset/font/Roboto-Medium.eot?#iefix') format('embedded-opentype'), url('/asset/font/Roboto-Medium.woff') format('woff'), url('/asset/font/Roboto-Medium.woff2') format('woff2');
 }
+
 @font-face {
   font-family: 'NotoSansKR';
   font-style: normal;
@@ -53,24 +59,118 @@
 }
 
 /* reset */
-html, body {height:100%;font-size: 16px;}
-*{margin:0;padding:0;box-sizing:border-box}
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,
-article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0}
-article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block}
-body{font-size:16px;line-height:24px;font-family:"NotoSansKR","Malgun Gothic","Dotum",sans-serif;color: $colorLevel3;background-color:#fff;overflow-y:hidden}
-h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}
-img{vertical-align:top;border:0}
-button,input,select,textarea{margin:0;font-size:100%;vertical-align:middle;font-family:"NotoSansKR","Malgun Gothic","Dotum",sans-serif;color: $colorLevel3;width: 100%;}
-fieldset{border:0}
-legend,caption{/*visibility:hidden;*/width:0;height:0;font-size:0;line-height:0}
-address,cite,code,dfn,em,var{font-style:normal;font-weight:normal}
-strong{font-style:normal;font-weight:normal;}
-ol,ul{list-style:none}
-table{border-collapse:collapse;border-spacing:0;width:100%;}
-caption,hr,legend{width:0px;height:0px;font-size:1px;text-indent:-9999em;line-height:0}
-th{text-align:left;font-size:14px;color:#333;line-height:18px;vertical-align:top;font-weight:normal;}
-th label{}
-td{text-align:left;color:#333;line-height:22px;vertical-align:top}
-dt {font-weight:normal;}
-a{ text-decoration: none; color: $colorLevel2}
+html, body {
+  height: 100%;
+  font-size: 16px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box
+}
+
+body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td,
+article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0
+}
+
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
+  display: block
+}
+
+body {
+  font-size: 16px;
+  line-height: 24px;
+  font-family: "NotoSansKR", "Malgun Gothic", "Dotum", sans-serif;
+  color: $colorLevel3;
+  background-color: #fff;
+  overflow-y: hidden
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: 100%;
+  font-weight: normal
+}
+
+img {
+  vertical-align: top;
+  border: 0
+}
+
+button, input, select, textarea {
+  margin: 0;
+  font-size: 100%;
+  vertical-align: middle;
+  font-family: "NotoSansKR", "Malgun Gothic", "Dotum", sans-serif;
+  color: $colorLevel3;
+  width: 100%;
+}
+
+fieldset {
+  border: 0
+}
+
+legend, caption { /*visibility:hidden;*/
+  width: 0;
+  height: 0;
+  font-size: 0;
+  line-height: 0
+}
+
+address, cite, code, dfn, em, var {
+  font-style: normal;
+  font-weight: normal
+}
+
+strong {
+  font-style: normal;
+  font-weight: normal;
+}
+
+ol, ul {
+  list-style: none
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+
+caption, hr, legend {
+  width: 0px;
+  height: 0px;
+  font-size: 1px;
+  text-indent: -9999em;
+  line-height: 0
+}
+
+th {
+  text-align: left;
+  font-size: 14px;
+  color: #333;
+  line-height: 18px;
+  vertical-align: top;
+  font-weight: normal;
+}
+
+th label {
+}
+
+td {
+  text-align: left;
+  color: #333;
+  line-height: 22px;
+  vertical-align: top
+}
+
+dt {
+  font-weight: normal;
+}
+
+a {
+  text-decoration: none;
+  color: $colorLevel2
+}
