--- a/asset/css/mixin.scss
+++ b/asset/css/mixin.scss
@@ -14,6 +14,7 @@ $_13px: 0.8125rem;
 $_14px: 0.875rem;
 $_15px: 0.9375rem;
 $_16px: 1rem;
+$_17px: 1.063rem;
 $_18px: 1.125rem;
 $_20px: 1.25rem;
 $_22px: 1.375rem;
