--- a/asset/css/reset.scss
+++ b/asset/css/reset.scss
@@ -170,7 +170,12 @@ dt {
   font-weight: normal;
 }
 
-a {
+a,button {
+  cursor:pointer;
   text-decoration: none;
-  color: $colorLevel2
+  color: $colorLevel2;
+  background: none;
+  border:0;
+  text-align: left;
 }
+
