--- a/asset/css/contents.scss
+++ b/asset/css/contents.scss
@@ -39,7 +39,6 @@
       padding-right:0;
     }
   }
-
   .theadBox{
     width:782px;
     border-radius: 8px;
@@ -59,13 +58,12 @@
     margin-bottom: 15px;
     .item{
       position: relative;
-      border-bottom:1px solid #ededf4;
       &:last-child{
         border-bottom: 0;
       }
       &:hover{
         z-index:5;
-        .td{
+        .tr{
           border-bottom-color: transparent;
         }
       }
@@ -83,6 +81,9 @@
         box-shadow: 7px 7px 9px 0px rgba(0,0,0,0.12);
       }
     }
+    .tr{      
+      border-bottom:1px solid #ededf4;
+    }
     .td{
       padding-top:13px;
       padding-bottom:13px;
@@ -93,6 +94,32 @@
       a{
         font-size:$_18px;
         letter-spacing: -0.1em;
+      }
+    }
+  }
+  .customerAdd{
+    padding:20px;
+    width: 100%;
+    text-align: center;
+    .btnCustomerAdd{
+      display: block;
+      padding:28px 0 25px;
+      font-size:$_20px;
+      color:$colorLevel2;
+      letter-spacing: -0.075em;
+      border:1px solid #ededf4;
+      text-align: center;
+      background: #fff;
+      border-radius: 10px;
+      &:before{
+        display: block;
+        content:"";
+        width: 38px;
+        height: 38px;
+        border-radius: 50%;
+        border: 1px solid #e0e4eb;
+        margin: 0 auto 12px;
+        background: url(/asset/images/common/icon_add.png) no-repeat center center;
       }
     }
   }
